--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,4 +43,5 @@ dependencies {
     compile(group: 'javax.xml.bind', name: 'jaxb-api', version: '2.1')
 // https://mvnrepository.com/artifact/xerces/xercesImpl
     compile(group: 'xerces', name: 'xercesImpl', version: '2.8.0')
+    compile('fr.bmartel:jspeedtest:1.32.1') //Speed test
 }
