--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,4 +44,6 @@ dependencies {
 // https://mvnrepository.com/artifact/xerces/xercesImpl
     compile(group: 'xerces', name: 'xercesImpl', version: '2.8.0')
     compile('fr.bmartel:jspeedtest:1.32.1') //Speed test
+    compile('org.slf4j:slf4j-api:1.7.25')
+    compile('com.github.tony19:logback-android:2.0.0')
 }
