--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -30,7 +30,7 @@
         </activity>
 
         <service android:name="org.eclipse.paho.android.service.MqttService" />
-        <service android:name="de.tu_ilmenau.gpstracker.sender.ClientService" />
+        <service android:name="de.tu_ilmenau.gpstracker.service.ClientService" />
 
     </application>
 
